<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_header_1">
        <menu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_item_1" />
            <item
                android:id="@+id/nav_slate"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_item_2" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_item_3" />
            <item
                android:id="@+id/nav_maps"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_item_4" />
            <item
                android:id="@+id/nav_programs"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_item_5" />
        </menu>
    </item>

    <item android:title="@string/menu_header_2">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_item_6" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_item_7" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_item_8" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_item_9" />
        </menu>
    </item>

</menu>
