<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />
    <PreferenceCategory android:title="Subscribe to Topics:">

    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="check_box_preference_1"
        android:title="News" />
    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="check_box_preference_2"
        android:title="Events" />
    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Notices"
        android:key="check_box_preference_3"
        android:title="Events" />
    <MultiSelectListPreference
        android:defaultValue="@array/list_preference_entries"
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_entries"
        android:key="multi_select_list_preference_1"
        android:title="Subscribe to Topics" />

</PreferenceScreen>
